--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,3 +1,5 @@
-pwd---
-- hosts: all
-- import_playbook: ../static-assignments/common.yml
+---
+- 
+ hosts: all
+- 
+ import_playbook: ../static-assignments/common.yml
